# SkillBoxProjects

./: .gitignore
Lesson16/: task16-4-1.cpp  task16-4-2.cpp  task16-4-3.cpp  task16-4-4.cpp  task16-4-5.cpp
Lesson17/: task17-4-1.cpp  task17-4-2.cpp  task17-4-3.cpp
Lesson18/: task18-5-1.cpp  task18-5-2-1.cpp  task18-5-2.cpp  task18-5-3-1.cpp  task18-5-3.cpp  task18-5-4.cpp
Lesson19/: CMakeLists.txt  task19-5-1.cpp  task19-5-2.cpp  task19-5-3.cpp  task19-5-4.cpp  task19-5-5.cpp
Lesson19/answers/: 6.txt  8.txt
Lesson20/: task20-5-1.cpp  task20-5-2.cpp  task20-5-3.cpp  task20-5-4.cpp
Lesson21/: task21-5-1.cpp
cppSkillboxProjects/: CMakeLists.txt  main.cpp  main1.cpp
lesson11task6.3/: CMakeLists.txt  main.cpp
lesson11task6.4/: main.cpp
lesson11task6.5/: main.cpp
lesson12task4.1/: main.cpp
lesson12task4.2/: main.cpp
lesson12task4.3/: main.cpp
lesson13task1.1/: main.cpp
lesson13task2.2/: main.cpp
lesson13task2.3/: main.cpp
lesson13task3.1/: main.cpp
lesson13task3.2/: main.cpp
lesson13task4.0/: main.cpp
lesson13task4.1/: main.cpp
lesson13task4.2/: main.cpp
lesson13task4.3/: main.cpp
lesson13task5.1/: main.cpp
lesson13task5.2/: main.cpp
lesson13task6.1/: main.cpp
lesson13task6.2/: main.cpp
lesson13task6.3/: main.cpp
lesson14task6/: CMakeLists.txt  task1.cpp  task10.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
lesson15/: CMakeLists.txt  task15-2.cpp  task15-3.cpp  task15-4.cpp  task15-5.cpp  task15-6-1.cpp  task15-6-2.cpp  task15-6-3.cpp  task15-6-4.cpp
untitled/: main.cpp
(+10 files in other folders)
